--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -91,7 +91,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 24px 24px 0;
+  padding: 24px;
   border-radius: 40px;
   background: linear-gradient(to bottom, #292929 0%, #202020 100%);
   position: relative;
@@ -106,9 +106,6 @@ button {
     0px 65px 18px rgba(0, 0, 0, 0);
 }
 
-.sidebar--bar {
-  padding-bottom: 24px;
-}
 
 .sidebar > *:not(.app-shadow-overlay) {
   position: relative;
